# python-backtest

./: .gitignore  Untitled-1.md  hello.py  pyproject.toml
backtest/: DataLoader.py  Engine.py  Orders.py  Portfolio.py  Position.py  Strategy.py  __init__.py  utils.py  visuals.py
backtesting-engine/: README.md  environment.yml  requirements.txt
backtesting-engine/src/: backtesting.py
backtesting-engine/tests/: test_backtesting.py
backtesting_engine/: __init__.py  requirements.txt  setup.py
backtesting_engine/Archive/: DataLoader.py  __init__.py  engine.py  strategy.py
backtesting_engine/backtesting_engine/: DataLoader.py  __init__.py  engine.py  portfolio.py  strategy.py
backtesting_engine/testing/: example.py
backtesting_engine/testing_0/: example.py
backtesting_engine_example/tests/: example.py
example_reference/: setup.py
example_reference/backtesting_engine/: __init__.py  data_handler.py  engine.py  portfolio.py  risk.py  strategies.py  utils.py
example_reference/tests/: example.py  test_data_handler.py
test/: tests.py  visual_tests.py
test/stock_data/: time-series-AAPL-5min.csv  time-series-AMD-5min.csv  time-series-MSFT-5min(1).csv  time-series-NVDA-5min(1).csv  time-series-NVDA-5min.csv
testing/: tests.ipynb
testing/test_data/stock_data/: time-series-AAPL-5min(1).csv  time-series-AAPL-5min(2).csv  time-series-AMD-5min(1).csv  time-series-AMD-5min(2).csv  time-series-MSFT-5min(2).csv  time-series-MSFT-5min.csv  time-series-NVDA-5min(2).csv  twelveData_stock_data.py
