[project]
name = "python-backtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logger>=1.4",
    "matplotlib>=3.10.0",
    "mplfinance>=0.12.10b0",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "pip>=25.0",
    "pyqt6>=6.8.0",
    "setuptools>=75.8.0",
    "ta>=0.11.0",
]
